force-app/main/default/objects/Job_Application__c/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <description
  >A date field to record the date when the application was submitted.</description>
    <inlineHelpText
  >Enter the date the application was submitted</inlineHelpText>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>