force-app/main/default/objects/Job_Application__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>The name of the company where the application is being sent.</description>
    <inlineHelpText>Enter the name of the company where the application is being sent.</inlineHelpText>
    <label>Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>