force-app/main/default/objects/Job_Application__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Lookup to a Contact that represents the main point of contact for the job. This could be a recruiter or employee at the company.</description>
    <inlineHelpText
  >Select the contact that represents the main point of contact for the job. This could be a recruiter or employee at the company.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>