force-app/main/default/objects/Job_Application__c/fields/Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Date__c</fullName>
    <description
  >A date field to specify when to follow up on the application.</description>
    <inlineHelpText
  >Enter a date to follow up on the application.</inlineHelpText>
    <label>Follow-Up Date</label>
    <type>Date</type>
</CustomField>