force-app/main/default/objects/Job_Application__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description
  >A text field to indicate the job location or if it&apos;s remote</description>
    <inlineHelpText
  >Enter the job location (City/State) or if it&apos;s remote</inlineHelpText>
    <label>Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>