force-app/main/default/objects/Job_Application__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description
  >A picklist or numerical field to rate the attractiveness of the job on a predetermined scale, for example, 1-5.</description>
    <inlineHelpText
  >How attractive is this job for you on a scale of 1 (Low) to 5 (High)</inlineHelpText>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>