force-app/main/default/objects/Job_Application__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <description>A numerical field to capture the expected salary for the job position.</description>
    <inlineHelpText>Enter the expected salary for this position.</inlineHelpText>
    <label>Salary</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>